docs(resources): update preset docs

--- a/values.yaml
+++ b/values.yaml
@@ -68,9 +68,11 @@ workload:
     # runAsGroup: 556
     # runAsNonRoot: false
 
-  # -- Resource limits and requests for the main workload pod
+  # -- Resource configuration for the main workload pod
   resources:
-    preset: "" # Either `nano`, `micro`, `small`, `medium`, `large`, `xlarge`, `2xlarge` or `4xlarge`
+    # -- Defines a preset configuration for resources. Either: `nano`, `micro`, `small`, `medium`, `large`, `xlarge`, `2xlarge`, `4xlarge`.
+    preset: ""
+    # -- Custom Resource Configuration: Define specific requests and limits. Use this when `preset` is not set.
     custom: {}
       # requests:
       #   cpu: 5m
