--- a/values.yaml
+++ b/values.yaml
@@ -188,8 +188,10 @@ workload:
 
   # -- Assign custom TopologySpreadConstraints rules to the main workload
   # Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/
-  topologySpreadConstraints: []
-
+  topologySpreadConstraints: {}
+    # preset: "" # Currently just 'spread-across-nodes'
+    # custom: []
+ 
   # -- Deployment or StatefulSet strategy to be added to the main workload
   strategy: {}
     # type: RollingUpdate
